syntax = "proto3";

package helloworld;

option go_package = "/proto";

import "google/api/annotations.proto";

// Here is the overall greeting service definition where we define all our endpoints
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service UserService {
  rpc UserImplementation (User) returns (User) {
    option (google.api.http) = {
      post: "/user/create"
      body: "*"
    };
  }
}

message User {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  string phoneNumber = 4;
}

